# brdf-monthly-priors

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  cli.md  experiments.md  index.md  quickstart.md  schema.md  siac-integration.md
examples/: gee_vs_official_mcd43a1.py
src/brdf_monthly_priors/: __init__.py  cli.py  composite.py  encoding.py  geotiff.py  periods.py  persistence.py  provider.py  quality.py  stac.py  temporal.py  types.py
src/brdf_monthly_priors/sources/: __init__.py  base.py  earthaccess.py  gee.py  local.py  rasterio_reader.py
src/surface_priors/: __init__.py  cli.py  composite.py  encoding.py  geotiff.py  persistence.py  provider.py  quality.py  stac.py  types.py
src/surface_priors/sources/: __init__.py  base.py  earthaccess.py  gee.py  local.py  rasterio_reader.py
tests/: conftest.py  test_cli.py  test_composite.py  test_encoding.py  test_experiment_helpers.py  test_gee_source.py  test_grid.py  test_periods.py  test_persistence.py  test_provider.py  test_temporal.py
