[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "brdf-monthly-priors"
dynamic = ["version"]
description = "Build native-grid BRDF prior composites and persist them as STAC/GeoTIFF products."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "BRDF Monthly Priors contributors" }
]
keywords = [
  "brdf",
  "modis",
  "viirs",
  "earthaccess",
  "siac",
  "remote-sensing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.24",
  "pyproj>=3.6",
  "rasterio>=1.3",
]

[project.optional-dependencies]
earthdata = [
  "earthaccess>=0.10",
  "pyproj>=3.6",
]
raster = []
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.0",
]
all = [
  "earthaccess>=0.10",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/MarcYin/brdf-monthly-priors"
Documentation = "https://MarcYin.github.io/brdf-monthly-priors/"
Repository = "https://github.com/MarcYin/brdf-monthly-priors"
Issues = "https://github.com/MarcYin/brdf-monthly-priors/issues"

[project.scripts]
brdf-monthly-priors = "brdf_monthly_priors.cli:main"

[tool.hatch.version]
path = "src/brdf_monthly_priors/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brdf_monthly_priors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["* 2.py", "* 2.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP006", "UP007", "UP035", "UP037", "UP045"]
